[package]
name = "cita_trie"
version = "3.0.1"
authors = ["yejiayu <yejiayu.fe@gmail.com>"]
description = "Modified Patricia Tree (aka Trie)."
license = "Apache-2.0"
edition = "2018"
readme = "README.md"
keywords = ["patricia", "mpt", "evm", "trie", "ethereum"]
repository = "https://github.com/cryptape/cita-trie"
homepage = "https://github.com/cryptape/cita-trie"
documentation = "https://docs.rs/cita_trie"

[dependencies]
parking_lot = "0.11"
bytes = "1"
rlp = "0.5"
tiny-keccak = { version = "2", features = ["keccak"] }
thiserror = "1.0"
hex = "0.4"
blake3 = "1.3"
sha2 = "0.10"

[dev-dependencies]
rand = "0.6.3"
criterion = "0.2.10"
ethereum-types = "0.5.2"
uuid = { version = "0.7", features = ["serde", "v4"] }

[[bench]]
name = "trie"
harness = false
